--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background-color: hsl(0, 0%, 81%);
+  font-size: 13px;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+}
