--- a/style.css
+++ b/style.css
@@ -38,7 +38,21 @@ body {
   background-color: var(--dark-black-blue);
 }
 
+.dan, .jon,
+.pat {
+  color: var(--white);
+}
+
 .jean,
 .kira {
   background-color: var(--white);
 }
+
+.quote {
+  opacity: 0.7;
+}
+
+/* .person:nth-child(2) {
+  opacity: 0.5;
+}
+ */
