--- a/style.css
+++ b/style.css
@@ -25,8 +25,15 @@ body {
   font: 500 13px "Barlow Semi Condensed", sans-serif;
 }
 
+main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
 .dan {
   background-color: var(--violet);
+  grid-column: 1 / 3;
 }
 
 .jon {
@@ -35,6 +42,8 @@ body {
 
 .pat {
   background-color: var(--dark-black-blue);
+  grid-row: 2;
+  grid-column: 2 / 4;
 }
 
 .dan,
@@ -46,6 +55,15 @@ body {
 .jean,
 .kira {
   background-color: var(--white);
+}
+
+.jean {
+  grid-row: 2;
+}
+
+.kira {
+  grid-row: 1 / 3;
+  grid-column: -2 / -1;
 }
 
 .quote {
