--- a/style.css
+++ b/style.css
@@ -17,18 +17,12 @@
 
   /* Set dimension variables */
   --desktop-width: 1030px;
-  --mobile-width: 1030px;
+  --mobile-width: 375px;
 }
 
 body {
   background-color: var(--light-gray);
   font: 500 13px "Barlow Semi Condensed", sans-serif;
-}
-
-main {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
 }
 
 .testimonial {
@@ -41,7 +35,6 @@ main {
 
 .dan {
   background-color: var(--violet);
-  grid-column: 1 / 3;
 }
 
 .jon {
@@ -50,8 +43,6 @@ main {
 
 .pat {
   background-color: var(--dark-black-blue);
-  grid-row: 2;
-  grid-column: 2 / 4;
 }
 
 .dan,
@@ -65,19 +56,37 @@ main {
   background-color: var(--white);
 }
 
-.jean {
-  grid-row: 2;
-}
-
-.kira {
-  grid-row: 1 / 3;
-  grid-column: -2 / -1;
-}
-
 .quote {
   opacity: 0.7;
 }
 
 .person p:nth-child(2) {
   opacity: 0.5;
+}
+
+/* Change to grid if screen size larger than mobile width */
+@media (min-width: var(--mobile-width)) {
+  main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+  }
+
+  .dan {
+    grid-column: 1 / 3;
+  }
+
+  .pat {
+    grid-row: 2;
+    grid-column: 2 / 4;
+  }
+
+  .jean {
+    grid-row: 2;
+  }
+
+  .kira {
+    grid-row: 1 / 3;
+    grid-column: -2 / -1;
+  }
 }
