--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  background-color: var(--light-gray);
+  background-color: var(--light-gray-blue);
   font: 500 13px "Barlow Semi Condensed", sans-serif;
 }
 
@@ -37,6 +37,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  box-shadow: 10px 5px 5px var(--light-gray)
 }
 
 .dan {
