--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  box-shadow: 10px 5px 5px var(--light-gray)
+  box-shadow: 10px 5px 5px var(--light-gray);
 }
 
 .dan {
@@ -61,6 +61,10 @@ main {
 .jean,
 .kira {
   background-color: var(--white);
+}
+
+.mugshot {
+  border-radius: 50%;
 }
 
 .highlight {
