--- a/style.css
+++ b/style.css
@@ -63,12 +63,30 @@ main {
   background-color: var(--white);
 }
 
-.person p:nth-child(3) {
-  opacity: 0.5;
+.person {
+  display: grid;
+  grid-template-areas: 
+    "image name"
+    "image verify";
+  grid-template-columns: 40px 1fr;
+  align-items: center;
 }
 
 .mugshot {
   border-radius: 50%;
+  max-height: 50%;
+  grid-area: image;
+}
+
+.name {
+  grid-area: name;
+  align-self: end;
+}
+
+.person p:nth-child(3) {
+  opacity: 0.5;
+  grid-area: verify;
+  align-self: start;
 }
 
 .highlight {
