--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ main {
 .jean,
 .kira {
   background-color: var(--white);
+  color: var(--dark-black-blue);
 }
 
 .person {
@@ -96,6 +97,7 @@ main {
 
 .quote {
   opacity: 0.7;
+  line-height: 1.4em;
 }
 
 /* Change layout on larger screens */
