Set min width for testimonials

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ main {
 .testimonial {
   padding: 1rem;
   border-radius: 5px;
+  min-width: calc(var(--mobile-width) - 25px);
   display: flex;
   flex-direction: column;
   gap: 10px;
