--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ main {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
   box-shadow: 0px 3px 15px var(--light-gray);
 }
 
@@ -103,6 +102,7 @@ main {
 .quote {
   opacity: 0.7;
   line-height: 1.4em;
+  margin-block-start: 10px;
 }
 
 /* 2-col layout for medium sized screens */
