--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 
 main {
   margin: 0 auto;
-  padding: 5rem 5rem 2rem;
+  padding: 30px 30px 10px;
   max-width: var(--desktop-width);
   display: grid;
   gap: 20px;
@@ -108,6 +108,7 @@ main {
 .attribution {
   font-size: 11px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .attribution a {
